add event detail page
and implement fullscreen image viewer on add event

and changes button function such as edit, view image only can be seen while swipe the event

--- a/src/components/EventSpace/EventSpace.css
+++ b/src/components/EventSpace/EventSpace.css
@@ -181,5 +181,24 @@
 .arrow-btn.right {
   right: 10px;
 }
+  
+.nav-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 3rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+}
 
+.nav-btn.left { 
 
+  left: 10px; 
+}
+
+.nav-btn.right { 
+  right: 10px; 
+}
