--- a/src/components/EventSpace/EventModal.css
+++ b/src/components/EventSpace/EventModal.css
@@ -12,7 +12,7 @@
   z-index: 1000;
   max-width: 500px;
   width: 90%;
-  height: 100vh;
+  height: 100%;
 }
 
 .modal h2 {
@@ -40,7 +40,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 .image-preview-container img {
@@ -49,6 +49,34 @@
   object-fit: cover;
   border-radius: 8px;
   border: 1px solid #ddd;
+}
+
+/* Fullscreen overlay */
+.fullscreen-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  z-index: 9999;
+
+}
+
+.fullscreen-img {
+  width: 100%;
+  max-height: 70%;
+  /* border-radius: 12px; */
+  box-shadow: 0 4px 20px rgba(0,0,0,0.6);
 }
 
 .modal-actions {
